fix alignment

--- a/src/assets/style/components/file-metadata.sass
+++ b/src/assets/style/components/file-metadata.sass
@@ -1,11 +1,13 @@
 @import '@/assets/style/ffa.sass'
 
 .file-metadata
+  width: 400px
   display: flex
   flex-flow: column nowrap
   text-align: left
 
   .form-container
+    width: 100%
     .title-field
       font-size: $size-4
     .description-field
