--- a/src/assets/style/views/create-new-listing.sass
+++ b/src/assets/style/views/create-new-listing.sass
@@ -8,7 +8,6 @@
       .metadata-container
         display: flex
         flex-flow: column nowrap
-        width: 400px
         padding-left: 42px
         .start
           margin-top: 42px
